2005-10-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-special-display-p): New function.

	* mml.el (mml-preview): Use it; doc fix.

2005-10-29  Romain Francoise  <romain@orebokech.com>

	* message.el (message-fix-before-sending): Fix comment.

2005-10-29  Jari Aalto  <jari.aalto@cante.net>

	* gnus-sum.el (gnus-article-sort-by-date-reverse): New function.

2005-10-29  Jari Aalto  <jari.aalto@cante.net>

	* score-mode.el (gnus-score-edit-done-hook): Introduce variable.
	Used in gnus-score.el.

2005-10-28  Reiner Steib  <Reiner.Steib@gmx.de>

	* mm-util.el (mm-codepage-setup): Remove bogus alias test.

2005-10-27  Reiner Steib  <Reiner.Steib@gmx.de>

	* flow-fill.el (fill-flowed-encode-tests): Restore trailing
	whitespace removed in revision 7.8.  Use concatenated string to
	protect trailing whitespace.

2005-10-27  Jouni K Seppanen <jks@iki.fi>  (tiny change)

	* nnimap.el (nnimap-search-uids-not-since-is-evil): Add variable.
	(nnimap-request-expire-articles): Use it to avoid sending 'UID
	SEARCH UID ... NOT SINCE' queries, for inefficient servers like
	Courier IMAP ("some version from 2004").  Mostly based on similar
	code in the same function.

2005-10-26  Didier Verna  <didier@xemacs.org>

	* gnus-group.el (gnus-group-compact-group): invalidate original
	article buffer.
	* gnus-srvr.el (gnus-server-compact-server): ditto.
	* nnml.el (nnml-request-compact-group): handle self Xref: field in
	NOV database and in article itself.
	Invalidate article backlog.

2005-10-26  Reiner Steib  <Reiner.Steib@gmx.de>

	* mm-uu.el (mm-uu-hide-markers): Fix XEmacs case.

2005-10-26  Simon Josefsson  <jas@extundo.com>

	* flow-fill.el (fill-flowed): Flow-fill unquoted lines too, revert
	part of 2004-07-25 change.

2005-10-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-display-completion-list): New function.
	(message-expand-group): Use it; make sure the Completions buffer
	is modifiable.

2005-10-23  Chong Yidong  <cyd@stupidchicken.com>
